# docs/swagger.yaml
@@ -318,10 +318,10 @@ paths:
         '409':
           description: Super admin already exists
 
-  /auth/admin/profile:
+  /auth/profile:
     get:
-      summary: Get Admin Profile
-      description: Get authenticated admin's profile information
+      summary: Get User Profile
+      description: Get authenticated user's profile information based on id token
       tags:
         - Authentication
       security:
@@ -341,6 +341,8 @@ paths:
                     properties:
                       admin:
                         $ref: '#/components/schemas/Admin'
+                        $ref: '#/components/schemas/User'
+                        $ref: '#/components/schemas/CA'
         '404':
           $ref: '#/components/responses/NotFound'
 
